Set up test infra with ninja.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
-* Rename alloc.c to allocate.c?
-* Rename instr.c to instruction.c?
 
 Ninja:
-* Figure out how to run tests with ninja.
+* Figure out why no-op change rebuilds a bunch of stuff.
+* Start running all the tests in ninja.
 * Figure out how to do code coverage with ninja.
 
 Fble Compilation:
