--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
 
 Ninja:
-* Start running spec tests in ninja.
-* Add the rest of the spec tests to ninja.
-* Have failed spec tests output an error message pointing to the test file.
+* See if I can clean up reporting for tests
+ - to avoid duplicating outputs.
 * Figure out how to track dependencies for prgms/*.fble.
 * Figure out how to do code coverage with ninja.
 
