Implement enough of generate_c to generate C for Fble/Tests.fble.
Unfortunately it ends up generating 1.2 million lines of C code, which gcc
isn't too happy about compiling.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,11 @@
 
 Fble Compilation:
-* Write code to compile an FbleValue to C code that, when given
-  an FbleHeap, creates that same value.
-  - Set up fble-test variant that goes through the compilation path.
-  - Maybe ignore concerns about sharing of values for now?
+* Double check whether we expect 1.2 million lines of C code generated for
+  Fble/Tests.fble by looking at the disassembly for it.
+* Try generating a different C function for every InstrBlock. See if that
+  makes gcc any happier. Let's say initial goal is it takes no more than 10
+  minutes to compile the generated C code with gcc.
+
 * Generate custom run functions in compiled code that just calls existing
   InstrImpl functions.
 * Now we should be off and running with tons of optimization opportunities.
