Put code for each module in its own function.
Rather than combining them all into one giant top level function, which the
goal of making gcc happier about compiling generated C code. It's also a step
towards modular compilation.

Bump the mem-test tolerance up to 10%, because we got a false positive test
failure.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
 Fble Compilation:
+* Factor out common logic in typecheck and compile for looking up a module
+  dependency's index.
+
 * Compile modules separately in FbleCompile.
 * Change GenerateC to generate a separate function for each InstrBlock.
   See if we can compile Fble/Tests.fble now.
