--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Fble Compilation:
 * Factor out common logic in typecheck and compile for looking up a module
   dependency's index.
+* Avoid duplicating code between fble-stdio and fble-compiled-stdio.
 
 * Compile modules separately in FbleCompile.
 * Change GenerateC to generate a separate function for each InstrBlock.
