Try generating C code for /Fble/Tests%.
gcc still isn't happy with it. I'll need to split up the generated code into
separate .c files.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@ Fble Compilation:
 
 * Compile modules separately in FbleCompile.
 * Avoid duplicating code between fble-stdio and fble-compiled-stdio.
+* Make public headers available for compiled code to use so we don't have to
+  give direct access to internal header files.
 
 * Generate custom run functions in compiled code that just calls existing
   InstrImpl functions.
