Attempt to compile the generated c code for each module.
I still don't have enough memory on my computer to do so.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,8 @@
 Fble Compilation:
-* Generate .o files for all .fble modules.
-  This will tell us whether gcc can compile them or not.
-* Generate a libfbleprgms.a with all the .o files.
+* Understand why /Sat/Aim% generates such a big .c file.
 * Change .c files to generate a program that adds an FbleCompiledModule to an
   FbleCompiledProgram.
+* Generate a libfbleprgms.a with all the .o files.
 * Write an fble-compile-main program that takes a module path and a C function
   and generates a function that calls FbleLink on the modules loaded by
   calling the load function for that C program.
