Define FbleLinkFromSource function.
As a way for end users to interpret .fble files without being exposed to the
details of the compiler passes required to load, type check, compile, and link
the program.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Fble Compilation:
+* Make fble-syntax.h into fble-program.h and syntax.h,c into expr.h,c.
+
 * Define FbleThread type in, say, thread.h.
 * Don't rely on FbleCode* for the size of a function scope.
 * Define FbleCode and FbleThunkContext types and use them for FbleThunkValue.
