--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,9 @@
 Fble Compilation:
+* Update all the documentation for execute APIs.
+
+* Does it make sense to have one thunk type for both refs and computations?
+  Should we have two different types instead, or some other distinction?
+
 * Rename isa.h,c to code.h,c.
 * Make FbleExecutable a proper abstract type.
 * Move standard run function to interpret.c.
