--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 Fble Compilation:
+* Remove execute.c dependency on code.h.
 * Make FbleExecutable a proper abstract type.
 * Move standard run function to interpret.c.
+* Can I cleanup/break the dependency cycle between execute.h and value.h?
+* Should definition of FbleThread* be private to execute.c?
 
 * Generate custom FbleExecutable in GenerateC rather than reusing the
   interpreter.
