Use FbleCode with empty instrs for generated code.
So we can pass locals and statics to the linker and don't need to special case
code possibly being code. Eventually we should clean up the API for this.

We can now run the generated code successfully.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Fble Compilation:
+* Rename FBLE_INSTR_BLOCK_MAGIC to FBLE_CODE_MAGIC.
+
 * Figure out memory leak that happens when moving time slice check to
   execute.c.
 * Figure out why splitting ThunkValue into RefValue and StackValue hurt
