--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,15 @@
-Fble Compilation:
+* Reorganize TODO file.
+
 * Figure out memory leak that happens when moving time slice check to
   execute.c.
 * Figure out why splitting ThunkValue into RefValue and StackValue hurt
   performance so much? Just double the number of allocations?
+  - 30% more allocations means 30% more time doing GC. That could certainly be
+    enough to explain the performance cost.
 
 * Make FbleExecutable a proper abstract type.
 * Can I cleanup/break the dependency cycle between execute.h and value.h?
 * Should definition of FbleThread* be private to execute.c?
-
-* Generate custom FbleExecutable in GenerateC rather than reusing the
-  interpreter.
 
 * Add back managed/native stack optimization?
   The idea is we can reuse the native stack to quickly get back into a callers
